--- a/website/home.html
+++ b/website/home.html
@@ -155,7 +155,21 @@
     width: 100%;
     border-top-left-radius: calc(.25rem - 1px);
     border-top-right-radius: calc(.25rem - 1px);
-    height: 60%;
+    height: 59%;
+    }
+
+ .card-img-midtop {
+    width: 100%;
+    border-top-left-radius: calc(.25rem - 1px);
+    border-top-right-radius: calc(.25rem - 1px);
+    height: 59%;
+    }
+
+    .card-img-mid {
+    width: 100%;
+    border-top-left-radius: calc(.25rem - 1px);
+    border-top-right-radius: calc(.25rem - 1px);
+    height: 100%;
     }
     .word-container{
         height: 45px;
@@ -283,6 +297,9 @@
     border-top-left-radius: calc(.25rem - 1px);
     border-top-right-radius: calc(.25rem - 1px);
     height: 100%;
+}
+.card-img-midtop {
+  height: 60%;
 }
     .bg-light{
       margin-left: 2px;
@@ -457,9 +474,9 @@ body {
 }
 
 .main>.preview {
-  width: 50%;
-  height: 100%;
-  background: #ef5350;
+  width: 100%;
+  height: 170%;
+  /* background: #ef5350; */
 }
 
 .main>.counter {
@@ -989,20 +1006,20 @@ body {
                                           <div class="post main">
                                             <!-- Florine Stettheimer -->
                                             <div class="preview">
-                                              <img class="card-img-top" src="photos/sister.jpg">
+                                              <img class="card-img-midtop" src="photos/sister.jpg">
                                             </div>
                                           </div>
                                           <div class="post sec">
-                                            <img class="card-img-top" src="photos/ashbury.jpg" alt="Card image cap">
+                                            <img class="card-img-mid" src="photos/ashbury.jpg" alt="Card image cap">
                                           </div>
                                           <div class="post sec">
-                                            <img class="card-img-top" src="photos/picnic.jpg" alt="Card image cap">
+                                            <img class="card-img-mid" src="photos/picnic.jpg" alt="Card image cap">
                                           </div>
                                           <div class="post sec">
-                                            <img class="card-img-top" src="photos/natatorium.jpg" alt="Card image cap">
+                                            <img class="card-img-mid" src="photos/natatorium.jpg" alt="Card image cap">
                                           </div>
                                           <div class="post sec">
-                                            <img class="card-img-top" src="photos/family-.jpg" alt="Card image cap">
+                                            <img class="card-img-mid" src="photos/family-.jpg" alt="Card image cap">
                                           </div>
                                         </div>
                                         <div class="fabs">
@@ -1031,20 +1048,20 @@ body {
                                           <div class="post main">
                                             <!-- Fernando Amorsolo -->
                                             <div class="preview">
-                                              <img class="card-img-top" src="photos/plantingrice.jpg">
+                                              <img class="card-img-midtop" src="photos/plantingrice.jpg">
                                             </div>
                                           </div>
                                           <div class="post sec">
-                                            <img class="card-img-top" src="photos/afternoon.jpg" alt="Card image cap">
+                                            <img class="card-img-mid" src="photos/afternoon.jpg" alt="Card image cap">
                                           </div>
                                           <div class="post sec">
-                                            <img class="card-img-top" src="photos/totown.jpg"alt="Card image cap">
+                                            <img class="card-img-mid" src="photos/totown.jpg"alt="Card image cap">
                                           </div>
                                           <div class="post sec">
-                                            <img class="card-img-top" src="photos/tinikling.jpg" alt="Card image cap">
+                                            <img class="card-img-mid" src="photos/tinikling.jpg" alt="Card image cap">
                                           </div>
                                           <div class="post sec">
-                                            <img class="card-img-top" src="photos/fruitpick.jpg" alt="Card image cap">
+                                            <img class="card-img-mid" src="photos/fruitpick.jpg" alt="Card image cap">
                                           </div>
                                         </div>
                                         <div class="fabs">
@@ -1073,20 +1090,20 @@ body {
                                           <div class="post main">
                                             <!-- Pablo Picasso -->
                                             <div class="preview">
-                                              <img class="card-img-top" src="photos/weeping.jpg">
+                                              <img class="card-img-midtop" src="photos/weeping.jpg">
                                             </div>
                                           </div>
                                           <div class="post sec">
-                                            <img class="card-img-top" src="photos/painter.jpg" alt="Card image cap">
+                                            <img class="card-img-mid" src="photos/painter.jpg" alt="Card image cap">
                                           </div>
                                           <div class="post sec">
-                                            <img class="card-img-top" src="photos/accordionist.jpg" alt="Card image cap">
+                                            <img class="card-img-mid" src="photos/accordionist.jpg" alt="Card image cap">
                                           </div>
                                           <div class="post sec">
-                                            <img class="card-img-top" src="photos/avignon.jpg" alt="Card image cap">
+                                            <img class="card-img-mid" src="photos/avignon.jpg" alt="Card image cap">
                                           </div>
                                           <div class="post sec">
-                                            <img class="card-img-top" src="photos/blue-nude.jpg" alt="Card image cap">
+                                            <img class="card-img-mid" src="photos/blue-nude.jpg" alt="Card image cap">
                                           </div>
                                         </div>
                                         <div class="fabs">
