--- a/website/popular-art.html
+++ b/website/popular-art.html
@@ -682,7 +682,7 @@ body {
             </div>
             <div class="carousel-item">
                 <img class="d-block w-100 picture-3" alt="">
-            </div> --> -->
+            </div> --> 
             <!--Buttons-->
              <!-- <a class="carousel-control-prev" href="#carouselExampleControls" role="button" data-slide="prev">
                 <span class="carousel-control-prev-icon" aria-hidden="true"></span>
@@ -693,7 +693,7 @@ body {
                 <span class="sr-only">Next</span>
             </a>
         </div>
-    </div>  --> -->
+    </div>  --> 
     <nav class="navbar navbar-expand-md bg-custom navbar-dark">
         <!-- Burger Menu Button -->
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#collapsibleNavbar">
