--- a/website/home.html
+++ b/website/home.html
@@ -179,14 +179,15 @@
     }
     #row2{
         height:20px;
+        justify-content: center;
     }
     #see-more{
-        margin-left: 47.5%;
         background-color: blueviolet;
         color: white;
         border:none;
         border-radius: 4%;
         margin-bottom: 30px;
+        padding: 3px;
     }
     .card:hover{
         background-color: pink;
@@ -968,7 +969,7 @@ body {
                                 </div>
                               </div>
                         <div id="row2" class="row">
-                         <button id="see-more" >See More</button>
+                         <a id="see-more" href="popular-art.html">See More</a>
                               </div>
                               <hr>
 
