--- a/website/sign up.html
+++ b/website/sign up.html
@@ -90,36 +90,37 @@
     </head>
     <body>
         <img class="blob1"src="http://sweet.io/bg-bubble__title.91def0c97d89d0548ee4.svg"></img>
-        <nav class="navbar bg-custom navbar-dark">
-            <!-- Burger Menu Button -->
-            <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#collapsibleNavbar">
-                <span class="navbar-toggler-icon"></span>
-            </button>
-            <!-- Search Bar -->
-            <form class="form-inline mr-auto">
-                <div class="md-form my-0 header-search">
-                    <input class="form-control" type="text" placeholder="Search" aria-label="Search">
-                </div>
-                <button class="header-nav-searchButton" onclick="searchBar()"><i class="fas fa-search text-white" aria-hidden="true"></i></button>
-            </form>
-            <!-- Login & Signup Buttons -->
-            <a class="navbar-brand" href="#" onclick="fadein()">Login</a>
-            <a class="navbar-brand" href="sign up.html">Sign Up</a>
-            <!-- Burger Menu Links -->
-            <div class="collapse navbar-collapse" id="collapsibleNavbar">
-                <ul class="navbar-nav">
-                <li class="nav-item">
-                    <a class="nav-link" href="#">Home</a>
-                </li>
-                <li class="nav-item">
-                    <a class="nav-link" href="#" onclick="fadein()">Login</a>
-                </li>
-                <li class="nav-item">
-                    <a class="nav-link" href="sign up.html">Sign Up</a>
-                </li>    
-                </ul>
-            </div>  
-        </nav>
+        <!-- Tablet and Phone Navbar -->
+    <nav class="navbar bg-custom navbar-dark">
+        <!-- Burger Menu Button -->
+        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#collapsibleNavbar">
+            <span class="navbar-toggler-icon"></span>
+        </button>
+        <!-- Search Bar -->
+        <form class="form-inline mr-auto ml-1">
+            <div class="md-form my-0">
+                <input class="form-control header-nav-searchBar" type="text" placeholder="Search" aria-label="Search">
+            </div>
+            <button class="header-nav-searchButton" onclick="searchBar()"><i class="fas fa-search text-white" aria-hidden="true"></i></button>
+        </form>
+        <!-- Login & Signup Buttons -->
+        <a class="navbar-brand" href="#" onclick="fadein()">Login</a>
+        <a class="navbar-brand" href="sign up.html">Sign Up</a>
+        <!-- Burger Menu Links -->
+        <div class="collapse navbar-collapse" id="collapsibleNavbar">
+            <ul class="navbar-nav">
+            <li class="nav-item">
+                <a class="nav-link" href="#">Home</a>
+            </li>
+            <li class="nav-item">
+                <a class="nav-link" href="#" onclick="fadein()">Login</a>
+            </li>
+            <li class="nav-item">
+                <a class="nav-link" href="sign up.html">Sign Up</a>
+            </li>    
+            </ul>
+        </div>  
+    </nav>
         <div class="flex">
             <nav id="sidebar">
                 <ul class="list-unstyled components">
