--- a/website/contact us.html
+++ b/website/contact us.html
@@ -130,11 +130,24 @@
         </style>
     </head>
     <body>
+        <div id="modalSuccess" class="modal fade" role="dialog">
+            <div class="modal-dialog modal-dialog-centered modal-sm">
+
+                <!-- Modal content-->
+                <div class="modal-content">
+                    <div class="modal-body">
+                        <p class="text-center">Your information has been sent and our team will contact you shortly.</p>
+                        <button type="button" class="btn btn-block btn-purple-outline" data-dismiss="modal">Close</button>
+                    </div>
+                </div>
+            
+            </div>
+        </div>
         <div id="myModal" class="modal fade" role="dialog">
             <div class="modal-dialog modal-dialog-centered modal-sm">
                 <div class="modal-content">
                     <div class="modal-body">
-                        <form action="/action_page.php">
+                        <div>
                             <div class="form-group">
                                 <label for="name">Name:</label>
                                 <input type="text" class="form-control" id="name">
@@ -148,8 +161,8 @@
                                 <textarea class="form-control" rows="5" id="comment"></textarea>
                             </div>
                             <button type="button" class="modalbtn btn btn-purple-outline" data-dismiss="modal">Close</button>
-                            <button type="submit" id="modalSubmit" class="modalbtn btn btn-purple-dark" style="float:right">Submit</button>
-                        </form>                              
+                            <button type="submit" id="modalSubmit" class="modalbtn btn btn-purple-dark" data-dismiss="modal" data-toggle="modal" data-target="#modalSuccess">Submit</button>
+                        </div>                              
                     </div>
                 </div>
             </div>
