--- a/website/home.html
+++ b/website/home.html
@@ -854,13 +854,13 @@
           </div>
           <div class="forgot-password">
             <b>
-              <div class="login-container login-picture" style="float: left"></div>
-              <div class="login-container" style="float: right;">
+              
+              <div class="login-container" style="margin-top: 9%;">
                 Enter your User Name:<br>
                 <input type="text" placeholder="Enter User Name">
               </div>
             </b>
-            <div class="login-container" style="float: right; text-align: center">
+            <div class="login-container" style="text-align: center; margin: 10%;">
               <button class="login-button" style="width: auto">Send me an email!</button>
               <br><br><a id="backtoLogin" href="javascript:void(0);">Back to Login</a>
               <br>Don't have an account? <a href="sign up.html">Sign Up</a>
