--- a/website/popular-art.html
+++ b/website/popular-art.html
@@ -769,20 +769,18 @@ body {
                         <br>Don't have an account? <a href="sign up.html">Sign Up</a>
                     </div>
                 </div>
-                <div class="forgot-password">
+                <!-- <div class="forgot-password"> -->
                     <b>
-                    <div class="login-container login-picture" style="float: left"></div>
-                    <div class="login-container" style="float: right;">
+                    <div class="login-container">
                         Enter your User Name:<br>
                         <input type="text" placeholder="Enter User Name">
                     </div>
-                    </b>
-                    <div class="login-container" style="float: right; text-align: center">
+                    <div class="login-container" style="text-align: center; position: absolute; margin: 24%;" >
                         <button class="login-button" style="width: auto">Send me an email!</button>
                         <br><br><a id="backtoLogin" href="javascript:void(0);">Back to Login</a>
                         <br>Don't have an account? <a href="sign up.html">Sign Up</a>
                     </div>
-                </div>
+                <!-- </div> -->
             </div>
         </div>
         <div class="body container-fluid"> <!--.Header-->
