--- a/website/home.html
+++ b/website/home.html
@@ -10,11 +10,11 @@
     <link href="bootstrap/css/bootstrap.min.css" rel="stylesheet">
     <script src="bootstrap/js/bootstrap.min.js"></script>
     <!-- Fonts -->
-    <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">
-    <link href="https://fonts.googleapis.com/css?family=Poppins&display=swap" rel="stylesheet">
-    <script src="https://kit.fontawesome.com/b0c06c45a8.js"></script>
-    <script defer src="https://use.fontawesome.com/releases/v5.0.13/js/solid.js" integrity="sha384-tzzSw1/Vo+0N5UhStP3bvwWPq+uvzCMfrN1fEFe+xBmv1C/AtVX5K0uZtmcHitFZ" crossorigin="anonymous"></script>
-    <script defer src="https://use.fontawesome.com/releases/v5.0.13/js/fontawesome.js" integrity="sha384-6OIrr52G08NpOFSZdxxz1xdNSndlD4vdcf/q2myIUVO0VsqaGHJsB0RaBE01VTOY" crossorigin="anonymous"></script>
+    <link rel="stylesheet" href="css/icon.css">
+    <link rel="stylesheet" href="css/poppins.css">
+    <script src="js/font1.js"></script>
+    <script src="js/solid.js"></script>
+    <script src="js/fontawesome.js"></script>
     <!-- Our Custom CSS -->
     <link rel="stylesheet" href="css/login.css">
     <link rel="stylesheet" href="css/sidebar.css">
@@ -22,11 +22,13 @@
     <link rel="stylesheet" href="css/homelayout.css">
     <link rel="stylesheet" href="css/footer.css">
     <link rel="stylesheet" href="css/carousel-design.css">
-    <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
+    <script src="js/header.js"></script>
+    <script src="js/login.js"></script>
+    <!-- Other CSS and JS -->
+    <link rel="stylesheet" href="css/aos.css">
     <link rel="stylesheet" href="css/imagehover.min.css">
-
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js"></script>
-    <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
+    <script src="js/popper.min.js"></script>
+    <script src="js/aos.js"></script>
     <title>HomePage</title>
 <style>
     *{
@@ -220,16 +222,16 @@
         border-bottom:none;
     }
     .fabs {
-  position: absolute;
-  margin-top: -30px;
-  margin-left: 260px;
-  overflow: hidden;
-  width: 80px;
-  height: 80px;
-  border-radius: 5px;
-  transition: 1s ease-in-out;
-  border-radius: 50%;
-}
+      position: absolute;
+      margin-top: -30px;
+      margin-left: 260px;
+      overflow: hidden;
+      width: 80px;
+      height: 80px;
+      border-radius: 5px;
+      transition: 1s ease-in-out;
+      border-radius: 50%;
+    }
     @media(max-width: 768px) and (min-width: 540px) {
       .container-fluid,.body{
         margin-left: 0px;
@@ -246,15 +248,15 @@
         top: 0%;
         height: 50%;
         position: absolute;
-    }
-    #con {
-        margin-left: 0px;
-    }
-    #cd2{
-      display:none;
-    }
-    #fourth{
-        display: none;
+      }
+      #con {
+          margin-left: 0px;
+      }
+      #cd2{
+        display:none;
+      }
+      #fourth{
+          display: none;
       }
     }
     @media(max-width: 540px){
@@ -266,398 +268,398 @@
       }
 
       #cd2{
-      display:none;
-    }
-    .bg-light{
-      width: 409px;
-    height: 478px;
-    }
-    .card-img-top {
-    width: 100%;
-    border-top-left-radius: calc(.25rem - 1px);
-    border-top-right-radius: calc(.25rem - 1px);
-    height: 100%;
-}
-    .bg-light{
-      margin-left: 2px;
-    }
-    #con{
-      margin-left: 0px;
-    }
-    .slide {
-    width: 100%;
-    left: 0%;
-    top: 0%;
-    height: 50%;
-    position: absolute;
-}
-    .text-title {
-      font-family: graphik--semibold,Roboto,sans-serif;
-      font-weight: 600;
-      font-size: 20px;
-      margin-bottom: 0px;
-      /* align-items: center; */
-      color: black;
-    }
-    #brush, #trending{
-    font-size: 27px;
-    }
-    .word-container{ 
-        margin-bottom: -10px;
-    }
-    .fabs {
-    margin-top: -44px;
-    margin-left: 111px;
-}
+        display:none;
+      }
+      .bg-light{
+        width: 409px;
+        height: 478px;
+      }
+      .card-img-top {
+        width: 100%;
+        border-top-left-radius: calc(.25rem - 1px);
+        border-top-right-radius: calc(.25rem - 1px);
+        height: 100%;
+      }
+      .bg-light{
+        margin-left: 2px;
+      }
+      #con{
+        margin-left: 0px;
+      }
+      .slide {
+        width: 100%;
+        left: 0%;
+        top: 0%;
+        height: 50%;
+        position: absolute;
+      }
+      .text-title {
+        font-family: graphik--semibold,Roboto,sans-serif;
+        font-weight: 600;
+        font-size: 20px;
+        margin-bottom: 0px;
+        /* align-items: center; */
+        color: black;
+      }
+      #brush, #trending{
+      font-size: 27px;
+      }
+      .word-container{ 
+          margin-bottom: -10px;
+      }
+      .fabs {
+        margin-top: -44px;
+        margin-left: 111px;
+      }
     }
 
     @media(max-width: 411px){
       .bg-light{
-      left:-7%;
-      width: 300px;
-      height: 415px;
-    }
-  
+        left:-7%;
+        width: 300px;
+        height: 415px;
+      }
+
     }
   
     @import url(https://zavoloklom.github.io/material-design-iconic-font/css/docs.md-iconic-font.min.css);
-body {
-  background: #64b5f6;
-  text-align: center;
-}
+    body {
+      background: #64b5f6;
+      text-align: center;
+    }
 
-#card2 {
-  height: 400px;
-  width: 300px;
-  background: #fff;
-  font-family: Roboto;
-  display: block;
-  position: relative;
-  margin: 50px auto;
-  border-radius: 5px;
-  transition: all 0.2s ease-in-out;
-}
+    #card2 {
+      height: 400px;
+      width: 300px;
+      background: #fff;
+      font-family: Roboto;
+      display: block;
+      position: relative;
+      margin: 50px auto;
+      border-radius: 5px;
+      transition: all 0.2s ease-in-out;
+    }
 
-.card:hover {
-  box-shadow: 0 10px 20px rgba(0, 0, 0, 0.19), 0 6px 6px rgba(0, 0, 0, 0.23);
-}
+    .card:hover {
+      box-shadow: 0 10px 20px rgba(0, 0, 0, 0.19), 0 6px 6px rgba(0, 0, 0, 0.23);
+    }
 
-.fab {
-  position: absolute;
-  width: 60px;
-  height: 60px;
-  margin-top: 0;
-  margin-left: 50px;
-  visibility: hidden;
-  background-color: #ffd54f;
-  border-radius: 50%;
-  transform: scale(0);
-  box-shadow: 0 2px 3px rgba(0, 0, 0, 0.22), 0 1px 2px rgba(0, 0, 0, 0.24);
-  transition: margin-top 0.6s 0.0s ease-in-out, margin-left 0.6s 0.1s ease-in-out, transform 0.6s 0.0s ease-in-out, visibility 0.6s ease-in-out;
-}
+    .fab {
+      position: absolute;
+      width: 60px;
+      height: 60px;
+      margin-top: 0;
+      margin-left: 50px;
+      visibility: hidden;
+      background-color: #ffd54f;
+      border-radius: 50%;
+      transform: scale(0);
+      box-shadow: 0 2px 3px rgba(0, 0, 0, 0.22), 0 1px 2px rgba(0, 0, 0, 0.24);
+      transition: margin-top 0.6s 0.0s ease-in-out, margin-left 0.6s 0.1s ease-in-out, transform 0.6s 0.0s ease-in-out, visibility 0.6s ease-in-out;
+    }
 
-.active .fab {
-  margin-top: 50px;
-  margin-left: 120px;
-  transform: scale(12);
-  visibility: visible;
-  transition: margin-top 0.5s ease-in-out, margin-left 0.6s ease-in-out, transform 0.4s 0.3s ease-in-out, visibility 0.4s ease-in-out;
-  box-shadow: 0 3px 6px rgba(0, 0, 0, 0.16), 0 3px 6px rgba(0, 0, 0, 0.23);
-}
+    .active .fab {
+      margin-top: 50px;
+      margin-left: 120px;
+      transform: scale(12);
+      visibility: visible;
+      transition: margin-top 0.5s ease-in-out, margin-left 0.6s ease-in-out, transform 0.4s 0.3s ease-in-out, visibility 0.4s ease-in-out;
+      box-shadow: 0 3px 6px rgba(0, 0, 0, 0.16), 0 3px 6px rgba(0, 0, 0, 0.23);
+    }
 
-.avatar {
-  margin-top: 5px;
-  margin-left: -30px;
-  width: 60px;
-  height: 60px;
-  font-size:2em;
-  line-height:60px;
-  color: #37474f;
-  border-radius: 50%;
-  background-color: #ffd54f;
-  position: absolute;
-  transition: 0.6s ease-in-out;
-  cursor: pointer;
-  box-shadow: 0 3px 6px rgba(0, 0, 0, 0.16), 0 3px 6px rgba(0, 0, 0, 0.23);
-}
+    .avatar {
+      margin-top: 5px;
+      margin-left: -30px;
+      width: 60px;
+      height: 60px;
+      font-size:2em;
+      line-height:60px;
+      color: #37474f;
+      border-radius: 50%;
+      background-color: #ffd54f;
+      position: absolute;
+      transition: 0.6s ease-in-out;
+      cursor: pointer;
+      box-shadow: 0 3px 6px rgba(0, 0, 0, 0.16), 0 3px 6px rgba(0, 0, 0, 0.23);
+    }
 
-.active .avatar {
-  transform: scale(2);
-  margin-top: 50px;
-  margin-left: -30px;
-  transition: 0.6s ease-in-out;
-  box-shadow: 0 3px 6px rgba(0, 0, 0, 0.16), 0 3px 6px rgba(0, 0, 0, 0.23);
-}
+    .active .avatar {
+      transform: scale(2);
+      margin-top: 50px;
+      margin-left: -30px;
+      transition: 0.6s ease-in-out;
+      box-shadow: 0 3px 6px rgba(0, 0, 0, 0.16), 0 3px 6px rgba(0, 0, 0, 0.23);
+    }
 
-.active .avatar:hover {
-  box-shadow: 0 10px 20px rgba(0, 0, 0, 0.19), 0 6px 6px rgba(0, 0, 0, 0.23);
-}
+    .active .avatar:hover {
+      box-shadow: 0 10px 20px rgba(0, 0, 0, 0.19), 0 6px 6px rgba(0, 0, 0, 0.23);
+    }
 
 
 
-.active .fabs {
-  margin-top: 0px;
-  margin-left: 0px;
-  width: 300px;
-  height: 400px;
-  transition: 0.4s ease-in-out;
-  border-radius: 0;
-}
+    .active .fabs {
+      margin-top: 0px;
+      margin-left: 0px;
+      width: 300px;
+      height: 400px;
+      transition: 0.4s ease-in-out;
+      border-radius: 0;
+    }
 
-.content {
-  position: absolute;
-  width: 280px;
-  height: 380px;
-  margin: 10px;
-  text-align: center;
-  overflow-y: auto;
-  transition: 0.5s 0.3s cubic-bezier(.55, 0, .1, 1);
-}
+    .content {
+      position: absolute;
+      width: 280px;
+      height: 380px;
+      margin: 10px;
+      text-align: center;
+      overflow-y: auto;
+      transition: 0.5s 0.3s cubic-bezier(.55, 0, .1, 1);
+    }
 
-.active .content {
-  transform: scale(0.2);
-  opacity: 0;
-  transition: 0.2s 0.3s cubic-bezier(.55, 0, .1, 1);
-}
+    .active .content {
+      transform: scale(0.2);
+      opacity: 0;
+      transition: 0.2s 0.3s cubic-bezier(.55, 0, .1, 1);
+    }
 
-.post {
-  position: relative;
-  display: inline-block;
-  height: 100px;
-  margin: 10px auto 0;
-  background: #eceff1;
-  border-radius: 3px;
-  box-shadow: 0 3px 6px rgba(0, 0, 0, 0.16), 0 3px 6px rgba(0, 0, 0, 0.23);
-  transition: all 0.2s ease-in-out;
-}
+    .post {
+      position: relative;
+      display: inline-block;
+      height: 100px;
+      margin: 10px auto 0;
+      background: #eceff1;
+      border-radius: 3px;
+      box-shadow: 0 3px 6px rgba(0, 0, 0, 0.16), 0 3px 6px rgba(0, 0, 0, 0.23);
+      transition: all 0.2s ease-in-out;
+    }
 
-.post:hover{
-  box-shadow: 0 10px 20px rgba(0,0,0,0.19), 0 6px 6px rgba(0,0,0,0.23);
-}
+    .post:hover{
+      box-shadow: 0 10px 20px rgba(0,0,0,0.19), 0 6px 6px rgba(0,0,0,0.23);
+    }
 
-.counter {
-  border-radius: 50%;
-  background: #3E50B4;
-  cursor: pointer;
-}
+    .counter {
+      border-radius: 50%;
+      background: #3E50B4;
+      cursor: pointer;
+    }
 
-.detail {
-  border: 1px solid #607d8b;
-}
+    .detail {
+      border: 1px solid #607d8b;
+    }
 
-.main {
-  width: 99%;
-  height: 130px;
-}
+    .main {
+      width: 99%;
+      height: 130px;
+    }
 
-.main>.preview {
-  width: 50%;
-  height: 100%;
-  background: #ef5350;
-}
+    .main>.preview {
+      width: 50%;
+      height: 100%;
+      background: #ef5350;
+    }
 
-.main>.counter {
-  width: 40px;
-  height: 40px;
-  margin-left: 220px;
-  margin-top: -120px;
-}
+    .main>.counter {
+      width: 40px;
+      height: 40px;
+      margin-left: 220px;
+      margin-top: -120px;
+    }
 
-.main>.detail{
-  width:50px;
-  margin-top: -10px;
-  margin-left: 150px;
-}
+    .main>.detail{
+      width:50px;
+      margin-top: -10px;
+      margin-left: 150px;
+    }
 
-.main>.details{
-  border: 1px solid #607d8b;
-  width:100px;
-  margin-top: 30px;
-  margin-left: 150px;
-}
+    .main>.details{
+      border: 1px solid #607d8b;
+      width:100px;
+      margin-top: 30px;
+      margin-left: 150px;
+    }
 
-.sec {
-  width: 49%;
-}
+    .sec {
+      width: 49%;
+    }
 
-.sec>.preview {
-  width: 100%;
-  height: 70%;
-  background: #42a5f5;
-}
+    .sec>.preview {
+      width: 100%;
+      height: 70%;
+      background: #42a5f5;
+    }
 
-.sec>.counter {
-  width: 20px;
-  height: 20px;
-  margin-left: 110px;
-  margin-top: -10px;
-}
+    .sec>.counter {
+      width: 20px;
+      height: 20px;
+      margin-left: 110px;
+      margin-top: -10px;
+    }
 
-.sec>.detail{
-  width:50px;
-  margin-left: 10px;
-}
+    .sec>.detail{
+      width:50px;
+      margin-left: 10px;
+    }
 
-.ter {
-  width: 32%;
-}
+    .ter {
+      width: 32%;
+    }
 
-.ter>.preview {
-  width: 100%;
-  height: 80%;
-  background: #d4e157;
-}
+    .ter>.preview {
+      width: 100%;
+      height: 80%;
+      background: #d4e157;
+    }
 
-.ter>.counter {
-  width: 15px;
-  height: 15px;
-  margin-left: 65px;
-  margin-top: -7px;
-}
+    .ter>.counter {
+      width: 15px;
+      height: 15px;
+      margin-left: 65px;
+      margin-top: -7px;
+    }
 
-.ter>.detail{
-  width:40px;
-  margin-left: 10px;
-}
+    .ter>.detail{
+      width:40px;
+      margin-left: 10px;
+    }
 
-.user {
-  position: absolute;
-  width: 280px;
-  height: 200px;
-  margin: 150px 10px 0 10px;
-  text-align: center;
-  visibility: hidden;
-  transition: 0.5s cubic-bezier(.55, 0, .1, 1);
-}
+    .user {
+      position: absolute;
+      width: 280px;
+      height: 200px;
+      margin: 150px 10px 0 10px;
+      text-align: center;
+      visibility: hidden;
+      transition: 0.5s cubic-bezier(.55, 0, .1, 1);
+    }
 
-.active .user {
-  visibility: visible;
-}
+    .active .user {
+      visibility: visible;
+    }
 
-.socials {
-  display: inline-block;
-}
+    .socials {
+      display: inline-block;
+    }
 
-.social {
-  width: 40px;
-  height: 40px;
-  border-radius: 50%;
-  transform: translate(0px, -10px);
-  opacity: 0;
-  float: left;
-  margin: 0 auto;
-  overflow: hidden;
-  z-index: 2;
-  transition: 0.2s cubic-bezier(.55, 0, .1, 1);
-  cursor: pointer;
-}
+    .social {
+      width: 40px;
+      height: 40px;
+      border-radius: 50%;
+      transform: translate(0px, -10px);
+      opacity: 0;
+      float: left;
+      margin: 0 auto;
+      overflow: hidden;
+      z-index: 2;
+      transition: 0.2s cubic-bezier(.55, 0, .1, 1);
+      cursor: pointer;
+    }
 
-.social>i {
-  line-height: 40px;
-  font-size: 2em;
-  color: #37474f;
-}
+    .social>i {
+      line-height: 40px;
+      font-size: 2em;
+      color: #37474f;
+    }
 
-.active .social {
-  transform: translate(0px, 0px);
-  opacity: 1;
-  transition: 0.3s 0.5s cubic-bezier(.55, 0, .1, 1);
-}
+    .active .social {
+      transform: translate(0px, 0px);
+      opacity: 1;
+      transition: 0.3s 0.5s cubic-bezier(.55, 0, .1, 1);
+    }
 
-.profiles {
-  display: inline-block;
-}
+    .profiles {
+      display: inline-block;
+    }
 
-.profile {
-  width: 50%;
-  height: auto;
-  transform: translate(0px, -10px);
-  opacity: 0;
-  float: left;
-  margin: 0 auto;
-  overflow: hidden;
-  z-index: 2;
-  transition: 0.2s cubic-bezier(.55, 0, .1, 1);
-  color: #37474f;
-}
+    .profile {
+      width: 50%;
+      height: auto;
+      transform: translate(0px, -10px);
+      opacity: 0;
+      float: left;
+      margin: 0 auto;
+      overflow: hidden;
+      z-index: 2;
+      transition: 0.2s cubic-bezier(.55, 0, .1, 1);
+      color: #37474f;
+    }
 
-.profile>span {
-  line-height: 40px;
-  font-size: 1.2em;
-  font-weight: 600;
-  display: block;
-  font-style: none;
-  color: #37474f;
-}
+    .profile>span {
+      line-height: 40px;
+      font-size: 1.2em;
+      font-weight: 600;
+      display: block;
+      font-style: none;
+      color: #37474f;
+    }
 
-.active .profile {
-  transform: translate(0px, 0px);
-  opacity: 1;
-  transition: 0.3s 0.8s cubic-bezier(.55, 0, .1, 1);
-}
-/* Ripple */
+    .active .profile {
+      transform: translate(0px, 0px);
+      opacity: 1;
+      transition: 0.3s 0.8s cubic-bezier(.55, 0, .1, 1);
+    }
+    /* Ripple */
 
-.ink {
-  display: block;
-  position: absolute;
-  background: rgba(38, 50, 56, 0.4);
-  border-radius: 100%;
-  -moz-transform: scale(0);
-  -ms-transform: scale(0);
-  /* webkit-transform: scale(0); */
-  transform: scale(0);
-}
-/*animation effect*/
+    .ink {
+      display: block;
+      position: absolute;
+      background: rgba(38, 50, 56, 0.4);
+      border-radius: 100%;
+      -moz-transform: scale(0);
+      -ms-transform: scale(0);
+      /* webkit-transform: scale(0); */
+      transform: scale(0);
+    }
+    /*animation effect*/
 
-.ink.animate {
-  animation: ripple 0.5s ease-in-out;
-}
+    .ink.animate {
+      animation: ripple 0.5s ease-in-out;
+    }
 
-@keyframes ripple {
-  /*scale the element to 250% to safely cover the entire link and fade it out*/
-  
-  100% {
-    opacity: 0;
-    -moz-transform: scale(5);
-    -ms-transform: scale(5);
-    webkit-transform: scale(5);
-    transform: scale(5);
-  }
-}
-/*Scrollbar*/
+    @keyframes ripple {
+      /*scale the element to 250% to safely cover the entire link and fade it out*/
+      
+      100% {
+        opacity: 0;
+        -moz-transform: scale(5);
+        -ms-transform: scale(5);
+        -webkit-transform: scale(5);
+        transform: scale(5);
+      }
+    }
+    /*Scrollbar*/
 
-::-webkit-scrollbar {
-  width: 6px;
-}
+    ::-webkit-scrollbar {
+      width: 6px;
+    }
 
-::-webkit-scrollbar-track {
-  border-radius: 0;
-}
+    ::-webkit-scrollbar-track {
+      border-radius: 0;
+    }
 
-::-webkit-scrollbar-thumb {
-  margin: 2px;
-  border-radius: 10px;
-  background: rgba(0, 0, 0, 0.2);
-}
-#id1,#id2,#id3{
-    background:transparent;
-}
-#fabs2{
-    background-color: #ef5350;
-}
+    ::-webkit-scrollbar-thumb {
+      margin: 2px;
+      border-radius: 10px;
+      background: rgba(0, 0, 0, 0.2);
+    }
+    #id1,#id2,#id3{
+        background:transparent;
+    }
+    #fabs2{
+        background-color: #ef5350;
+    }
 
-#fabs3{
-    background-color: #64b5f6;
-}
-#profile{
-    width:100%;
-}
+    #fabs3{
+        background-color: #64b5f6;
+    }
+    #profile{
+        width:100%;
+    }
 
-.username{
-    font-size:25px;
-    margin-bottom: 0;
-    color:white;
-}
+    .username{
+        font-size:25px;
+        margin-bottom: 0;
+        color:white;
+    }
 
 </style>
 </head>
@@ -1171,8 +1173,6 @@ body {
                         </footer>
                         <!-- Footer -->
                         </div>
-                        <script src="js/header.js"></script>
-                        <script src="js/login.js"></script>
                         <script>
                           AOS.init();
                           //         $('.avatar').click(//
