--- a/website/home.html
+++ b/website/home.html
@@ -854,16 +854,16 @@
           </div>
           <div class="forgot-password">
             <b>
-              
+
               <div class="login-container" style="margin-top: 9%;">
                 Enter your User Name:<br>
                 <input type="text" placeholder="Enter User Name">
               </div>
             </b>
             <div class="login-container" style="text-align: center; margin: 10%;">
-              <button class="login-button" style="width: auto">Send me an email!</button>
+              <button class="login-button" style="width: auto">Send Code</button>
               <br><br><a id="backtoLogin" href="javascript:void(0);">Back to Login</a>
-              <br>Don't have an account? <a href="sign up.html">Sign Up</a>
+              <br>Don't have an account?<br> <a href="sign up.html">Sign Up</a>
             </div>
           </div>
         </div>
