ripple animation typo

--- a/website/home.html
+++ b/website/home.html
@@ -704,7 +704,7 @@
         opacity: 0;
         -moz-transform: scale(5);
         -ms-transform: scale(5);
-        webkit-transform: scale(5);
+        -webkit-transform: scale(5);
         transform: scale(5);
       }
     }
