--- a/website/popular-art.html
+++ b/website/popular-art.html
@@ -27,7 +27,7 @@
 
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js"></script>
     <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
-    <title>HomePage</title>
+    <title>Popular Artworks</title>
 <style>
     *{
         font-family: 'Poppins', sans-serif;
