--- a/website/home.html
+++ b/website/home.html
@@ -860,7 +860,7 @@
                 <input type="text" placeholder="Enter User Name">
               </div>
             </b>
-            <div class="login-container" style="text-align: center; margin: 10%;">
+            <div class="login-container" style="text-align: center;">
               <button class="login-button" style="width: auto">Send Code</button>
               <br><br><a id="backtoLogin" href="javascript:void(0);">Back to Login</a>
               <br>Don't have an account?<br> <a href="sign up.html">Sign Up</a>
