--- a/website/sign up.html
+++ b/website/sign up.html
@@ -160,7 +160,7 @@
                         </div>
                         <div class="login-container">
                             Password<br>
-                            <input type="password" placeholder="Enter Password">
+                            <input type="password"style="border-radius:0" placeholder="Enter Password">
                         </div>
                     </b>
                     <div class="login-container" style="text-align: center">
@@ -177,7 +177,7 @@
                             <input type="text" placeholder="Enter User Name">
                         </div>
                     </b>
-                    <div class="login-container" style="text-align: center; margin: 10%;">
+                    <div class="login-container" style="text-align: center;">
                         <button class="login-button" style="width: auto">Send Code</button>
                         <br><br><a id="backtoLogin" href="javascript:void(0);">Back to Login</a>
                         <br>Don't have an account?<br> <a href="sign up.html">Sign Up</a>
