added js file for header

--- a/website/home.html
+++ b/website/home.html
@@ -29,7 +29,8 @@
   <link rel="stylesheet" href="css/carousel-design.css">
   <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
   <link rel="stylesheet" href="css/imagehover.min.css">
-
+  <script src="js/header.js"></script>
+  
   <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js"></script>
   <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
   <title>HomePage</title>
