--- a/website/contact us.html
+++ b/website/contact us.html
@@ -159,15 +159,16 @@
         <img class="blob4"src="Blue.svg"></img>
         <img class="blob3"src="yellow.svg"></img>
         <img class="blob5"src="Blue.svg"></img>
+        <!-- Tablet and Phone Navbar -->
         <nav class="navbar bg-custom navbar-dark">
             <!-- Burger Menu Button -->
             <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#collapsibleNavbar">
-                <span class="navbar-toggler-icon"></span>
+            <span class="navbar-toggler-icon"></span>
             </button>
             <!-- Search Bar -->
-            <form class="form-inline mr-auto">
-                <div class="md-form my-0 header-search">
-                    <input class="form-control" type="text" placeholder="Search" aria-label="Search">
+            <form class="form-inline mr-auto ml-1">
+                <div class="md-form my-0">
+                    <input class="form-control header-nav-searchBar" type="text" placeholder="Search" aria-label="Search">
                 </div>
                 <button class="header-nav-searchButton" onclick="searchBar()"><i class="fas fa-search text-white" aria-hidden="true"></i></button>
             </form>
@@ -176,19 +177,19 @@
             <a class="navbar-brand" href="sign up.html">Sign Up</a>
             <!-- Burger Menu Links -->
             <div class="collapse navbar-collapse" id="collapsibleNavbar">
-                <ul class="navbar-nav">
+            <ul class="navbar-nav">
                 <li class="nav-item">
-                    <a class="nav-link" href="#">Home</a>
+                <a class="nav-link" href="#">Home</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="#" onclick="fadein()">Login</a>
+                <a class="nav-link" href="#" onclick="fadein()">Login</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="sign up.html">Sign Up</a>
+                <a class="nav-link" href="sign up.html">Sign Up</a>
                 </li>    
-                </ul>
+            </ul>
             </div>  
-        </nav>        
+        </nav>       
         <div class="flex">
             <nav id="sidebar">
                 <ul class="list-unstyled components">
