--- a/website/sign up.html
+++ b/website/sign up.html
@@ -160,7 +160,7 @@
                         </div>
                         <div class="login-container">
                             Password<br>
-                            <input type="password"style="border-radius:0" placeholder="Enter Password">
+                            <input type="password" placeholder="Enter Password">
                         </div>
                     </b>
                     <div class="login-container" style="text-align: center">
