--- a/website/contact us.html
+++ b/website/contact us.html
@@ -183,7 +183,7 @@
                 <div class="md-form my-0">
                     <input class="form-control header-nav-searchBar" type="text" placeholder="Search" aria-label="Search">
                 </div>
-                <button class="header-nav-searchButton" onclick="searchBar()"><i class="fas fa-search text-white" aria-hidden="true"></i></button>
+                <button class="header-nav-searchButton" type="button" onclick="searchBar()"><i class="fas fa-search text-white" aria-hidden="true"></i></button>
             </form>
             <!-- Login & Signup Buttons -->
             <a class="navbar-brand" href="#" onclick="fadein()">Login</a>
