--- a/website/home.html
+++ b/website/home.html
@@ -1056,7 +1056,7 @@
             </div>
           </div>
           <div id="row2" class="row">
-            <button id="see-more">See More</button>
+            <button id="see-more"><a href="popular-art.html">See More</a></button>
           </div>
           <hr>
 
@@ -1201,7 +1201,7 @@
             </div>
           </div>
           <div id="row2" class="row">
-            <button id="see-more">See More</button>
+            <button id="see-more"><a href="popular-art.html">See More</a></button>
           </div>
 
         </div>
