fixed icons on footer, changed title of feat artist page

--- a/website/feature-artist.html
+++ b/website/feature-artist.html
@@ -27,7 +27,7 @@
     <link rel="stylesheet" href="css/feature-artist.css">
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js"></script>
     <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
-    <title>HomePage</title>
+    <title>Featured Artist</title>
 <style>
     *{
         font-family: 'Poppins', sans-serif;
@@ -350,7 +350,7 @@ body {
   box-shadow: 0 10px 20px rgba(0, 0, 0, 0.19), 0 6px 6px rgba(0, 0, 0, 0.23);
 }
 
-.fab {
+.fabs>.fab {
   position: absolute;
   width: 60px;
   height: 60px;
@@ -364,7 +364,7 @@ body {
   transition: margin-top 0.6s 0.0s ease-in-out, margin-left 0.6s 0.1s ease-in-out, transform 0.6s 0.0s ease-in-out, visibility 0.6s ease-in-out;
 }
 
-.active .fab {
+.active .fabs>.fab {
   margin-top: 50px;
   margin-left: 120px;
   transform: scale(12);
