--- a/website/popular-art.html
+++ b/website/popular-art.html
@@ -350,7 +350,7 @@ body {
   box-shadow: 0 10px 20px rgba(0, 0, 0, 0.19), 0 6px 6px rgba(0, 0, 0, 0.23);
 }
 
-.fab {
+.fabs>.fab {
   position: absolute;
   width: 60px;
   height: 60px;
@@ -364,7 +364,7 @@ body {
   transition: margin-top 0.6s 0.0s ease-in-out, margin-left 0.6s 0.1s ease-in-out, transform 0.6s 0.0s ease-in-out, visibility 0.6s ease-in-out;
 }
 
-.active .fab {
+.active .fabs>.fab {
   margin-top: 50px;
   margin-left: 120px;
   transform: scale(12);
