changed footer website to ozweebo

--- a/website/contact us.html
+++ b/website/contact us.html
@@ -389,7 +389,7 @@
             <!-- Footer Elements -->
             <!-- Copyright -->
             <div class="footer-copyright text-center py-3">© 2019 Copyright:
-                <a href="home.html"> FoodReviews.com</a>
+                <a href="home.html"> ozweebo.com</a>
             </div>
             <!-- Copyright -->
             <script src="js/footer.js"></script>
