--- a/website/about/about us.html
+++ b/website/about/about us.html
@@ -58,6 +58,10 @@
                 align-items: stretch;
                 flex-direction: row;
             }
+            .flex1{
+                display:flex;
+                flex-direction: column;
+            }
             .wrapper {
             display: flex;
             align-items: stretch;
@@ -117,6 +121,7 @@
             </ul>
             </div>  
         </nav>
+        <div class="flex1">
         <div class="flex">
             <nav id="sidebar">
                 <ul class="list-unstyled components">
