--- a/website/contact us.html
+++ b/website/contact us.html
@@ -61,6 +61,12 @@
                 align-items: stretch;
                 flex-direction: row;
             }
+
+            .flex1{
+                display:flex;
+                flex-direction: column;
+            }
+
             .wrapper {
             display: flex;
             align-items: stretch;
@@ -202,7 +208,8 @@
                 </li>    
             </ul>
             </div>  
-        </nav>       
+        </nav>   
+        <div class="flex1">    
         <div class="flex">
             <nav id="sidebar">
                 <ul class="list-unstyled components">
