--- a/website/sign up.html
+++ b/website/sign up.html
@@ -66,6 +66,11 @@
             flex-direction: row;
         }
 
+        .flex1{
+            display:flex;
+            flex-direction: column;
+        }
+
         .wrapper {
             display: flex;
             align-items: stretch;
@@ -128,6 +133,7 @@
             </ul>
         </div>
     </nav>
+    <div class="flex1">
     <div class="flex">
         <nav id="sidebar">
             <ul class="list-unstyled components">
