--- a/website/home.html
+++ b/website/home.html
@@ -755,13 +755,19 @@
       float: left;
       margin: 20px;
     }
-    button.navbar-toggler:focus{
+    .nav-icon:hover{
+      color: pink;
+    }
+    button:focus{
       background-color: none;
       color:white;
     }
 
     button:hover{
       background-color: transparent;
+    }
+    button:active{
+      background-color:transparent;
     }
   </style>
 </head>
