--- a/website/home.html
+++ b/website/home.html
@@ -769,6 +769,9 @@
     button:active{
       background-color:transparent;
     }
+    .words{
+      margin-left:5px;
+    }
   </style>
 </head>
 
@@ -821,17 +824,14 @@
             <a class="material-icons nav-icon" href="#">home<span class="words">Home</span></a>
         </li>
         <li class="nav-item">
-            <a class="material-icons nav-icon" href="#">notifications<span class="words">Notifications</span></a>
-        </li>
-        <li class="nav-item">
-            <a class="material-icons nav-icon" href="#">bookmarks<span class="words">Bookmarks</span></a>
-        </li>   
-        <li class="nav-item">
-            <a class="material-icons nav-icon" href="#">forum<span class="words">Forum</span></a>
+            <a class="material-icons nav-icon" href="#">stars<span class="words">What's Hot</span></a>
         </li> 
         <li class="nav-item">
-            <a class="material-icons nav-icon" href="#">help_outline<span class="words">Help</span></a>
-        </li>  
+            <a class="material-icons nav-icon" href="#">supervised_user_circle<span class="words">About Us</span></a>
+        </li>
+        <li class="nav-item">
+            <a class="material-icons nav-icon" href="#">local_phone<span class="words">Contact Us</span></a>
+        </li>   
       </ul>
     </div>  
   </nav>
