--- a/website/home.html
+++ b/website/home.html
@@ -827,6 +827,9 @@
             <a class="material-icons nav-icon" href="#">stars<span class="words">What's Hot</span></a>
         </li> 
         <li class="nav-item">
+            <a class="material-icons nav-icon" href="#">account_circle<span class="words">Profile</span></a>
+        </li>   
+        <li class="nav-item">
             <a class="material-icons nav-icon" href="#">supervised_user_circle<span class="words">About Us</span></a>
         </li>
         <li class="nav-item">
@@ -844,17 +847,18 @@
             <a class="material-icons" href="#">home<span class="words">Home</span></a>
           </li>
           <li class="active1">
-            <a class="material-icons" href="#">notifications<span class="words">Notifications</span></a>
+            <a class="material-icons" href="#">stars<span class="words">What's Hot</span></a>
           </li>
           <li class="active1">
-            <a class="material-icons" href="#">bookmarks<span class="words">Bookmarks</span></a>
+              <a class="material-icons" href="#">account_circle<span class="words">Profile</span></a>
+            </li>
+          <li class="active1">
+            <a class="material-icons" href="#">supervised_user_circle<span class="words">About Us</span></a>
           </li>
           <li class="active1">
-            <a class="material-icons" href="#">forum<span class="words">Forum</span></a>
+            <a class="material-icons" href="#">local_phone<span class="words">Contact Us</span></a>
           </li>
-          <li class="active1">
-            <a class="material-icons" href="#">help_outline<span class="words">Help</span></a>
-          </li>
+
         </ul>
       </nav>
 
