--- a/website/home.html
+++ b/website/home.html
@@ -772,6 +772,7 @@
     .words{
       margin-left:5px;
     }
+
   </style>
 </head>
 
@@ -789,7 +790,7 @@
       </div>
       <div class="carousel-item">
         <img class="d-block w-100 picture-3" alt="">
-      </div> -->
+      </div> 
       <!--Buttons-->
       <a class="carousel-control-prev" href="#carouselExampleControls" role="button" data-slide="prev">
         <span class="carousel-control-prev-icon" aria-hidden="true"></span>
@@ -821,19 +822,19 @@
     <div class="collapse navbar-collapse" id="collapsibleNavbar">
       <ul class="navbar-nav">
         <li class="nav-item">
-            <a class="material-icons nav-icon" href="#">home<span class="words">Home</span></a>
+            <a class="material-icons nav-icon" href="home.html">home<span class="words">Home</span></a>
         </li>
         <li class="nav-item">
-            <a class="material-icons nav-icon" href="#">stars<span class="words">What's Hot</span></a>
+            <a class="material-icons nav-icon" href="popular-art.html">stars<span class="words">What's Hot</span></a>
         </li> 
         <li class="nav-item">
-            <a class="material-icons nav-icon" href="#">account_circle<span class="words">Profile</span></a>
+            <a class="material-icons nav-icon" href="feature-artist.html">account_circle<span class="words">Profile</span></a>
         </li>   
         <li class="nav-item">
-            <a class="material-icons nav-icon" href="#">supervised_user_circle<span class="words">About Us</span></a>
+            <a class="material-icons nav-icon" href="about/about us.html">supervised_user_circle<span class="words">About Us</span></a>
         </li>
         <li class="nav-item">
-            <a class="material-icons nav-icon" href="#">local_phone<span class="words">Contact Us</span></a>
+            <a class="material-icons nav-icon" href="contact us.html">local_phone<span class="words">Contact Us</span></a>
         </li>   
       </ul>
     </div>  
@@ -843,20 +844,23 @@
     <div class="flex">
       <nav id="sidebar">
         <ul class="list-unstyled components">
+            <li class="active1">
+                <a class="logo" href="home.html"><span class="Logo"><b>Ozweebo	<span class="trade">&trade;</span></b></span></a>
+              </li>
           <li class="active1">
-            <a class="material-icons" href="#">home<span class="words">Home</span></a>
+            <a class="material-icons" href="home.html">home<span class="words">Home</span></a>
           </li>
           <li class="active1">
-            <a class="material-icons" href="#">stars<span class="words">What's Hot</span></a>
+            <a class="material-icons" href="popular-art.html">stars<span class="words">What's Hot</span></a>
           </li>
           <li class="active1">
-              <a class="material-icons" href="#">account_circle<span class="words">Profile</span></a>
+              <a class="material-icons" href="feature-artist.html">account_circle<span class="words">Profile</span></a>
             </li>
           <li class="active1">
-            <a class="material-icons" href="#">supervised_user_circle<span class="words">About Us</span></a>
+            <a class="material-icons" href="about/about us.html">supervised_user_circle<span class="words">About Us</span></a>
           </li>
           <li class="active1">
-            <a class="material-icons" href="#">local_phone<span class="words">Contact Us</span></a>
+            <a class="material-icons" href="contact us.html">local_phone<span class="words">Contact Us</span></a>
           </li>
 
         </ul>
