--- a/website/about/about us.html
+++ b/website/about/about us.html
@@ -87,6 +87,32 @@
                 background-color: #ffffff;
                 opacity: 0.5;
             }
+            .nav-icon{
+            color: white;
+            float: left;
+            margin: 20px;
+            }
+            .nav-icon:hover{
+            color: pink;
+            }
+            button:focus{
+            background-color: none;
+            color:white;
+            }
+
+            button:hover{
+            background-color: transparent;
+            }
+            button:active{
+            background-color:transparent;
+            }
+            .words{
+            margin-left:5px;
+            }
+            .navbar-brand:hover{
+            border: none;
+            color:darkorchid;
+            }
         </style>
     </head>
     <body>
@@ -108,40 +134,52 @@
             <a class="navbar-brand" href="sign up.html">Sign Up</a>
             <!-- Burger Menu Links -->
             <div class="collapse navbar-collapse" id="collapsibleNavbar">
-            <ul class="navbar-nav">
-                <li class="nav-item">
-                <a class="nav-link" href="#">Home</a>
-                </li>
-                <li class="nav-item">
-                <a class="nav-link" href="#" onclick="fadein()">Login</a>
-                </li>
-                <li class="nav-item">
-                <a class="nav-link" href="sign up.html">Sign Up</a>
-                </li>    
-            </ul>
-            </div>  
+                    <ul class="navbar-nav">
+                      <li class="nav-item">
+                          <a class="material-icons nav-icon" href="home.html">home<span class="words">Home</span></a>
+                      </li>
+                      <li class="nav-item">
+                          <a class="material-icons nav-icon" href="popular-art.html">stars<span class="words">What's Hot</span></a>
+                      </li> 
+                      <li class="nav-item">
+                          <a class="material-icons nav-icon" href="feature-artist.html">account_circle<span class="words">Profile</span></a>
+                      </li>   
+                      <li class="nav-item">
+                          <a class="material-icons nav-icon" href="about/about us.html">supervised_user_circle<span class="words">About Us</span></a>
+                      </li>
+                      <li class="nav-item">
+                          <a class="material-icons nav-icon" href="contact us.html">local_phone<span class="words">Contact Us</span></a>
+                      </li>   
+                    </ul>
+                  </div>  
+        </nav>   
         </nav>
         <div class="flex1">
         <div class="flex">
-            <nav id="sidebar">
-                <ul class="list-unstyled components">
-                    <li class="active1">
-                        <a class="material-icons" href="#">home<span class="words">Home</span></a>  
-                    </li>
-                    <li class="active1">
-                        <a class="material-icons" href="#">notifications<span class="words">Notifications</span></a>
-                    </li>
-                    <li class="active1" >
-                        <a class="material-icons" href="#">bookmarks<span class="words">Bookmarks</span></a>
-                    </li>
-                    <li class="active1">
-                        <a class="material-icons" href="#">forum<span class="words">Forum</span></a>
-                    </li>
-                    <li class="active1">
-                        <a class="material-icons" href="#">help_outline<span class="words">Help</span></a>
-                    </li>
-                </ul>
-            </nav>
+                <nav id="sidebar">
+                        <ul class="list-unstyled components">
+                                <li class="active1">
+                                        <a class="logo" href="home.html"><span class="Logo"><b>Ozweebo	<span class="trade">&trade;</span></b></span></a>
+                                      </li>
+                          <li class="active1">
+                            <a class="material-icons" href="home.html">home<span class="words">Home</span></a>
+                          </li>
+                          <li class="active1">
+                            <a class="material-icons" href="popular-art.html">stars<span class="words">What's Hot</span></a>
+                          </li>
+                          <li class="active1">
+                              <a class="material-icons" href="feature-artist.html">account_circle<span class="words">Profile</span></a>
+                            </li>
+                          <li class="active1">
+                            <a class="material-icons" href="about us.html">supervised_user_circle<span class="words">About Us</span></a>
+                          </li>
+                          <li class="active1">
+                            <a class="material-icons" href="contact us.html">local_phone<span class="words">Contact Us</span></a>
+                          </li>
+                
+                        </ul>
+                      </nav>
+                
             <div id="frame">
                     <div class = "modl">
                         <button class="exitbutton" onclick=fadeout()>×</button>
