changed links in about us page

--- a/website/about/about us.html
+++ b/website/about/about us.html
@@ -131,27 +131,27 @@
             </form>
             <!-- Login & Signup Buttons -->
             <a class="navbar-brand" href="#" onclick="fadein()">Login</a>
-            <a class="navbar-brand" href="sign up.html">Sign Up</a>
+            <a class="navbar-brand" href="../sign up.html">Sign Up</a>
             <!-- Burger Menu Links -->
             <div class="collapse navbar-collapse" id="collapsibleNavbar">
-                    <ul class="navbar-nav">
-                      <li class="nav-item">
-                          <a class="material-icons nav-icon" href="home.html">home<span class="words">Home</span></a>
-                      </li>
-                      <li class="nav-item">
-                          <a class="material-icons nav-icon" href="popular-art.html">stars<span class="words">What's Hot</span></a>
-                      </li> 
-                      <li class="nav-item">
-                          <a class="material-icons nav-icon" href="feature-artist.html">account_circle<span class="words">Profile</span></a>
-                      </li>   
-                      <li class="nav-item">
-                          <a class="material-icons nav-icon" href="about/about us.html">supervised_user_circle<span class="words">About Us</span></a>
-                      </li>
-                      <li class="nav-item">
-                          <a class="material-icons nav-icon" href="contact us.html">local_phone<span class="words">Contact Us</span></a>
-                      </li>   
-                    </ul>
-                  </div>  
+                <ul class="navbar-nav">
+                    <li class="nav-item">
+                        <a class="material-icons nav-icon" href="../home.html">home<span class="words">Home</span></a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="material-icons nav-icon" href="../popular-art.html">stars<span class="words">What's Hot</span></a>
+                    </li> 
+                    <li class="nav-item">
+                        <a class="material-icons nav-icon" href="../feature-artist.html">account_circle<span class="words">Profile</span></a>
+                    </li>   
+                    <li class="nav-item">
+                        <a class="material-icons nav-icon" href="about us.html">supervised_user_circle<span class="words">About Us</span></a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="material-icons nav-icon" href="../contact us.html">local_phone<span class="words">Contact Us</span></a>
+                    </li>
+                </ul>
+            </div>  
         </nav>   
         </nav>
         <div class="flex1">
@@ -159,22 +159,22 @@
                 <nav id="sidebar">
                         <ul class="list-unstyled components">
                                 <li class="active1">
-                                        <a class="logo" href="home.html"><span class="Logo"><b>Ozweebo	<span class="trade">&trade;</span></b></span></a>
+                                        <a class="logo" href="../home.html"><span class="Logo"><b>Ozweebo	<span class="trade">&trade;</span></b></span></a>
                                       </li>
                           <li class="active1">
-                            <a class="material-icons" href="home.html">home<span class="words">Home</span></a>
+                            <a class="material-icons" href="../home.html">home<span class="words">Home</span></a>
                           </li>
                           <li class="active1">
-                            <a class="material-icons" href="popular-art.html">stars<span class="words">What's Hot</span></a>
+                            <a class="material-icons" href="../popular-art.html">stars<span class="words">What's Hot</span></a>
                           </li>
                           <li class="active1">
-                              <a class="material-icons" href="feature-artist.html">account_circle<span class="words">Profile</span></a>
+                              <a class="material-icons" href="../feature-artist.html">account_circle<span class="words">Profile</span></a>
                             </li>
                           <li class="active1">
                             <a class="material-icons" href="about us.html">supervised_user_circle<span class="words">About Us</span></a>
                           </li>
                           <li class="active1">
-                            <a class="material-icons" href="contact us.html">local_phone<span class="words">Contact Us</span></a>
+                            <a class="material-icons" href="../contact us.html">local_phone<span class="words">Contact Us</span></a>
                           </li>
                 
                         </ul>
@@ -211,7 +211,7 @@
                             <div class="login-container" style="text-align: center;">
                                 <button class="login-button" style="width: auto">Send Code</button>
                                 <br><br><a id="backtoLogin" href="javascript:void(0);">Back to Login</a>
-                                <br>Don't have an account?<br> <a href="sign up.html">Sign Up</a>
+                                <br>Don't have an account?<br> <a href="../sign up.html">Sign Up</a>
                             </div>
                         </div>
                     </div>
@@ -274,7 +274,7 @@
                                     <div class="col-12 about-text">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Neque rerum voluptates, eligendi vel odit cum maiores inventore nemo. Quisquam porro rem id sint ipsum numquam qui incidunt saepe officiis voluptates?
                                     </div>
                                     <div class="col-12 about-btn-container">
-                                        <a href="contact.html"><button class="about-button">Contact Us</button></a>
+                                        <a href="../contact us.html"><button class="about-button">Contact Us</button></a>
                                     </div>
                                 </div>
                             </div>
