moved blobs to photos folder

--- a/website/about/about us.html
+++ b/website/about/about us.html
@@ -235,7 +235,7 @@
                         <!-- Collapsible content -->
                         <div class="col-4  header-login">
                             <!--Blue blob-->
-                            <img class="blob"src="../Blue.svg"></img>
+                            <img class="blob"src="../photos/Blue.svg"></img>
                             <!-- Navbar brand -->
                             <button class="navbar-brand" onclick="fadein()">Login</button>
                             <button class="navbar-brand"><a href="../sign up.html">Sign Up</a></button>
