--- a/website/sign up.html
+++ b/website/sign up.html
@@ -248,10 +248,10 @@
                     <!-- Collapsible content -->
                     <div class="col-4  header-login">
                         <!-- Blobs -->
-                        <img class="blob2" src="Background.svg"></img>
-                        <img class="blob4" src="Blue.svg"></img>
-                        <img class="blob3" src="yellow.svg"></img>
-                        <img class="blob5" src="Blue.svg"></img>
+                        <img class="blob2" src="photos/Background.svg"></img>
+                        <img class="blob4" src="photos/Blue.svg"></img>
+                        <img class="blob3" src="photos/yellow.svg"></img>
+                        <img class="blob5" src="photos/Blue.svg"></img>
                         <!-- Navbar brand -->
                         <button class="navbar-brand" onclick="fadein()">Login</button>
                     </div>
