--- a/website/sign up.html
+++ b/website/sign up.html
@@ -93,6 +93,12 @@
             border: none;
             color:darkorchid;
         } 
+        @media only screen and (min-height: 768px) {
+        .foot-style {
+            position: fixed;
+            bottom: 0;
+        }
+        }
     </style>
 </head>
 <body>
